2008-12-15  Christophe Romain <cromain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix get_item_name deadlock on
	transaction

2008-12-10  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/eldap/eldap_utils.erl (case_insensitive_match/2): Replace
	stringprep by exmpp_stringprep.

2008-12-09  Christophe Romain <cromain@process-one.net>

	* src/mod_pubsub: Merge from latest trunk (r1716).

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_pubsub: Merge from trunk (r1692 to r1709).

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_pubsub/node_default.erl, src/mod_pubsub/node_pep.erl: Fix
	acl:match_rule/3 call. It takes a #jid record, not a short JID.

	* src/mod_pubsub/node_buddy.erl, src/mod_pubsub/node_club.erl,
	src/mod_pubsub/node_dispatch.erl, src/mod_pubsub/node_mb.erl,
	src/mod_pubsub/node_private.erl, src/mod_pubsub/node_public.erl,
	src/mod_pubsub/node_zoo.erl, src/mod_pubsub/nodetree_default.erl,
	src/mod_pubsub/nodetree_virtual.erl: Finish the conversion of
	mod_pubsub to Exmpp.

2008-12-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Enforce client stanza from attribute
	(EJAB-812).
	* src/jlib.erl: Likewise.

2008-12-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_receiver.erl, src/mod_offline_odbc.erl,
	src/mod_vcard_odbc.erl, src/mod_private_odbc.erl, src/jd2ejd.erl:
	Update Exmpp XML parser options.

	* src/gen_iq_handler.erl: Add the module and function names to the
	error message, when a module crash.

	* src/mod_pubsub/mod_pubsub.erl, src/mod_pubsub/nodetree_default.erl,
	src/mod_pubsub/node_default.erl, src/mod_pubsub/node_pep.erl: First
	pass of Exmpp conversion for mod_pubsub. Several modules aren't
	converted yet. Existent Mnesia tables written to disc are not
	updated. There must be bugs, mostly because of the mix between #jid
	record and short JIDs.

2008-12-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
